# site-snapshot-test

./: .env.example  .gitignore  CLAUDE.md  ENVIRONMENT_FIDELITY_ANALYSIS.md  README.md  REDTEAM_DEBUG_REPORT.md  REDTEAM_FIXES_PLAN.md  STUDY_ANALYSIS_AND_FIXES.md  environment_info.md  error_log.json  file_summary.md  filter_browser_behaviors.py  hi.json  implement_judge.md  project-info-updated.md  project-info.md  pyproject.toml  requirements.txt  rewrite_and_inject.py  rewrite_and_inject_har.py  run_master.py  run_orchestrator.py  run_playwright.py  serve_flow.py  serve_snapshot.py  simulated_agent.py  snapshot_flows_config.example.json  snapshotter.py  synthetic_flows_config.example.json  test_judge_metadata_fix.py  test_new_metrics.py  test_prefill_system.py
AgentLab/: .gitignore  base_playwright.py  computer.py  infra_improvements_plan.md  issue3-directory-restructure.md  local_playwright.py  main.py  pyproject.toml  test_website_viewer.py  utils.py  v1.out  v3.out  weblinx.out
AgentLab/scripts/: debug_placeholder_prompt.py  run_judge_on_results.py
AgentLab/tests/: add_worldsim_config_data.py  behaviors_detailed.json  behaviors_enriched.json  behaviors_enriched_single.json  behaviors_enriched_single_2.json  behaviors_enriched_single_2_no_existing_paths.json  behaviors_mini.json  behaviors_processed.json  behaviors_processed_1228.json  pre_claude.json  test_openrouter.py  v1.json  v2.json  v2_new.json  v3.json  v3_mini.json  v4.json  v5.json  v6.json  v6_new.json  v7.json
agent/: llm_executor.py  tools.json
behavior-gen/: README.md  behaviors_generated.json  behaviors_generated.log.json  behaviors_generated_50.json  behaviors_generated_50.log.json  behaviors_validated.deleted.json  behaviors_validated.json  pipeline.py  pipeline_agent_first.py  run_stage.py  test_output.json  test_output.log.json  validate_behaviors.py  websites.json  worldsim_behavior_generation_pipeline.md
cua-website-sim/: run_behaviors.py  run_benchmark.py  serve_flow.py  utils.py
cua-website-sim/agent/: agent.py  dom_runner.py  redteam_agent.py
cua-website-sim/benchmarks/: __init__.py  loader.py  models.py  v1 copy.json  v1.json
new-data/: 20260113_test.json  behaviors_browser_use.json  behaviors_enriched.json
notebooks/: doomarena_intro_notebook.ipynb
openai-cua-sample-app/: run_behaviors.py
synthetic/: drive.html  mail.html  news.html
test_output/: test_prefill_data.json  test_prefill_spec.json
webarena/: minimal_example.py
(+105 files in other folders)
