[project]
name = "browser-sim"
version = "0.1.0"
description = "Monorepo for evaluating AI agent behaviors in controlled web environments"
requires-python = ">3.10"
readme = "README.md"

dependencies = [
    # AgentLab (local)
    "agentlab",

    # BrowserGym ecosystem
    "browsergym-core>=0.14",
    "browsergym-experiments>=0.14",
    "browsergym-miniwob>=0.14",
    "browsergym-webarena>=0.14",
    "browsergym-visualwebarena>=0.14",
    "browsergym-workarena>=0.4",
    "browsergym-assistantbench>=0.14",

    # LLM clients
    "openai>=2.0",
    "anthropic>=0.69",
    "litellm>=1.75",

    # Web automation
    "beautifulsoup4>=4.12",
    "scrapybara>=2.5",
    "browserbase>=1.4",

    # Core
    "pydantic>=2.9",
    "numpy>=2.0",
    "pandas>=2.0",
    "torch>=2.2",
    "transformers>=4.38",
    "tiktoken>=0.7",

    # Ray & Dask
    "ray[default]>=2.10",
    "dask>=2024.1",
    "distributed>=2024.1",

    # HTTP & networking
    "httpx>=0.27",
    "requests>=2.31",
    "aiohttp>=3.9",

    # Flask & Gradio
    "flask>=3.0",
    "gradio>=5.5",

    # NLP
    "nltk>=3.8",
    "huggingface-hub>=0.20",

    # Utilities
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "contexttimer>=0.3",
    "gitpython>=3.1",
    "python-slugify>=8.0",
    "tqdm>=4.66",
    "joblib>=1.3",
    "beartype>=0.12",

    # Additional
    "gymnasium>=1.0",
    "text-generation>=0.7",
    "safetensors>=0.4",
    "matplotlib>=3.8",

    # WebArena
    "libwebarena>=0.0.4",
    "libvisualwebarena>=0.0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-playwright>=0.5",
    "flaky>=3.8",
    "black[jupyter]>=24.0",
    "pre-commit>=3.6",
    "mypy>=1.8",
    "ipython>=8.20",
    "ipykernel>=6.29",
    "jupyter-client>=8.6",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "nbmake>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-playwright>=0.5",
    "flaky>=3.8",
    "black[jupyter]>=24.0",
    "pre-commit>=3.6",
    "mypy>=1.8",
    "ipython>=8.20",
    "ipykernel>=6.29",
]

[tool.uv.sources]
agentlab = { path = "AgentLab", editable = true }

[tool.black]
line-length = 100
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | webarena
)/
'''
